refactor(landing/footer): change footer style

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -628,6 +628,7 @@ footer {
     color: var(--document-border-color);
     margin-top: 220px;
     padding-block: 12px;
+    text-align: center;
 
     #sweetAlert {
         color: #7066e0;
