--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -18,9 +18,7 @@
     --hamburger-bar-width: 20px;
     --hamburger-bar-height: 3px;
     --hamburger-gap: 3px;
-    --hamburger-height: calc(
-        (var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2)
-    );
+    --hamburger-height: calc((var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2));
     --rotate-start-end-amount: 134deg;
     --rotate-middle-one-amount: 50deg;
     --rotate-middle-two-amount: 220deg;
@@ -109,7 +107,7 @@ body {
         h2.silverBox-tagline {
             text-align: center;
             font-size: 20px;
-            color: var(--baner-tagline-color);
+            color: var(--primary-color);
             font-weight: 900;
             letter-spacing: 0.035em;
         }
@@ -126,27 +124,84 @@ body {
                 font-weight: 700;
 
                 #silverBox-name-tag {
-                    color: var(--baner-tagline-color);
+                    color: var(--primary-color);
                 }
             }
         }
     }
-    #silverBox-banner {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 35px;
-        background-color: #fbfbfb;
 
-        span {
-            font-size: 50px;
-            color: var(--primary-700);
-            font-weight: 700;
+    #silverBox-header {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 99;
+        background-color: var(--header-bg-color);
+        padding: 10px 0;
+
+        .silverBox-container {
+            padding: 0;
+            display: block;
+
+            nav {
+                display: flex;
+                align-items: center;
+
+                #logo {
+                    display: flex;
+                    align-items: center;
+
+                    img {
+                        width: 50px !important;
+                    }
+
+                    span {
+                        font-size: 32px;
+                        color: var(--primary-color);
+                        font-weight: 700;
+                        margin-right: 30px;
+                    }
+
+                }
+
+                ul {
+                    display: flex;
+                    gap: 0 20px;
+
+                    li {
+                        a {
+                            color: var(--header-color);
+                            font-size: 20px;
+                            font-weight: 600;
+                        }
+                    }
+                }
+
+                #hamburger-menu {
+                    cursor: pointer;
+                    display: none;
+                    flex-direction: column;
+                    gap: 5px 0;
+                    width: 20px;
+                    height: 20px;
+
+                    .row {
+                        width: 100%;
+                        height: 5px;
+                        border-radius: 5px;
+                        background-color: var(--header-color);
+                    }
+                }
+            }
         }
+
+
+
+
     }
 
     #silverBox-heroSection {
-        background-color: var(--baner-bg-color);
+        background-color: var(--box-color);
         color: var(--banner-color);
         padding: 40px 0;
         letter-spacing: 0.08em;
@@ -160,7 +215,7 @@ body {
         align-items: center;
         padding: 5px 22px;
         background: var(--button-bg-color);
-        color: var(--baner-tagline-color);
+        color: var(--primary-color);
         box-shadow: 1px 4px 5px 2px #07070740;
         border-radius: 10px;
         font-weight: 800;
@@ -170,6 +225,7 @@ body {
 }
 
 @media only screen and (max-width: 900px) {
+
     // hide horizontal overflow
     body {
         overflow-x: hidden;
@@ -186,6 +242,7 @@ code {
     font-weight: 700;
     letter-spacing: 0.03em;
     line-height: 30px;
+    padding: 20px !important;
 }
 
 main {
@@ -212,7 +269,7 @@ main {
 
             .silverBox-exampleColumn {
                 &:first-of-type {
-                    color: var(--baner-tagline-color);
+                    color: var(--primary-color);
                     font-size: 20px;
                     font-weight: 700;
                     letter-spacing: 0.035em;
@@ -226,7 +283,7 @@ main {
                         justify-content: center;
                         align-items: center;
                         padding: 5px 45px;
-                        background: var(--baner-bg-color);
+                        background: var(--box-color);
                         box-shadow: 1px 4px 5px 2px #07070740;
                         border-radius: 10px;
                         color: var(--white-in-white);
@@ -279,8 +336,7 @@ main {
                         transition: 0.2s;
 
                         &.silverBox-copied {
-                            filter: grayscale(100%) sepia(100%)
-                                hue-rotate(90deg);
+                            filter: grayscale(100%) sepia(100%) hue-rotate(90deg);
                         }
                     }
 
@@ -295,6 +351,7 @@ main {
     #silverBox-usageSection {
         background-color: var(--second-body-bgColor);
         color: var(--white-in-white);
+
         #silverBox-usageInstructions {
             p {
                 font-size: 18px;
@@ -365,6 +422,7 @@ main {
                 }
 
                 &:hover {
+
                     // on button hover
                     &::after {
                         animation: confusedArrow 1.5s;
@@ -423,9 +481,11 @@ main {
                 .silverBox-document-type {
                     color: var(--document-type);
                 }
+
                 .silverBox-document-default {
                     color: var(--document-default);
                 }
+
                 // .silverBox-document-boolean {
                 //     color: var(--document-boolean);
                 // }
@@ -435,6 +495,7 @@ main {
                     border-radius: 8px;
                     padding: 2px 6px;
                 }
+
                 .silverBox-document-description {
                     color: var(--document-description);
                     line-height: 30px;
@@ -458,14 +519,17 @@ main {
                     margin: 5px;
                     border-radius: 8px;
                 }
+
                 .silverBox-document-description-error {
                     background-color: var(--document-error-bgColor);
                     border-left: 8px solid var(--document-error-borderColor);
                 }
+
                 .silverBox-document-description-success {
                     background-color: var(--document-success-bgColor);
                     border-left: 8px solid var(--document-success-borderColor);
                 }
+
                 .silverBox-document-description-warning {
                     background-color: var(--document-warning-bgColor);
                     border-left: 8px solid var(--document-warning-borderColor);
@@ -475,7 +539,7 @@ main {
                     margin: 10px 0 20px;
                     padding: 5px 0;
                     overflow-x: hidden;
-                    
+
                     &.document-argument {
                         font-weight: 600;
                         font-style: italic;
@@ -493,10 +557,12 @@ main {
             .silverBox-tableRowHeader {
                 border-bottom: 1px solid var(--gray-300);
             }
+
             .silverBox-tableRow {
                 border-top: 1px solid var(--document-border-color);
                 font-weight: 500;
             }
+
             .silverBox-tableRowHeader {
                 border: none;
             }
@@ -566,6 +632,7 @@ footer {
 }
 
 @media only screen and (max-width: 900px) {
+
     main {
         section#silverBox-heroSection {
             div.whySilverBox {
@@ -592,6 +659,34 @@ footer {
             .silverBox-teamMembers {
                 grid-template-columns: unset !important;
             }
+        }
+    }
+
+    body {
+        #silverBox-header {
+            position: fixed;
+            top: 0;
+            right: 0;
+            left: 0;
+            z-index: 99;
+            background-color: var(--header-bg-color);
+            padding: 5px 0;
+
+            nav {
+                justify-content: space-between;
+                width: 100%;
+
+                ul {
+                    display: none;
+                }
+
+                #hamburger-menu {
+                    display: flex;
+                }
+
+            }
+
+
         }
     }
 }
