refactor(css/header): add font size variable for description text

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -82,6 +82,8 @@
     // text
     --silverBox-text-font-size: 18px;
     --silverBox-text-font-weight: 600;
+    --silverBox-text-font-size:17px;
+    --silverBox-text-font-weight:500;
     // buttons
     --silverBox-button-font-size: 16px;
     --silverBox-button-font-weight: 600;
